# minecraft-watcher

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs  server_util.rs  server_watcher.rs  status_reporter.rs  types.rs
