[package]
name = "mc-server-init"
version = "0.1.0"
edition = "2021"

[build]
rustflags = ["-Z", "threads=8"]

[profile.dev]
split-debuginfo = "unpacked"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
craftio-rs = "0.1"
tokio = { version = "1", features = ["full"] }
mcproto-rs = { version = "0.2.0", features = [] }
anyhow = "1.0.81"
log = "0.4.21"
tracing = "0.1"
tracing-subscriber = "0.3"
aws-config = "1.1.9"
aws-sdk-ec2 = "1.31.0"
tokio-cron-scheduler = "*"
lazy_static = "1.4.0"
clap = { version = "4.5.4", features = ["derive"] }

